<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="horizontal"
    tools:context="com.example.android.m_struct.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_home"
                style="@style/MainButtons"
                android:text="@string/menu_home" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_discover"
                style="@style/MainButtons"
                android:text="@string/menu_discover" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_playlist"
                style="@style/MainButtons"
                android:text="@string/menu_playlist_selected" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_radio"
                style="@style/MainButtons"
                android:text="@string/menu_radio" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DescriptionText"
                    android:text="@string/playlist_screen_description" />

                <TextView
                    style="@style/TiteText"
                    android:text="@string/playlist_title" />

                <View style="@style/SepLine" />


                <TextView
                    android:id="@+id/playlist1"
                    style="@style/PlaylistText"
                    android:text="@string/playlistname1" />

                <TextView
                    android:id="@+id/playlist2"
                    style="@style/PlaylistText"
                    android:text="@string/playlistname2" />

                <TextView
                    android:id="@+id/playlist3"
                    style="@style/PlaylistText"
                    android:text="@string/playlistname3" />

                <TextView
                    android:id="@+id/playlist4"
                    style="@style/PlaylistText"
                    android:text="@string/playlistname4" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
