<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="horizontal"
    tools:context="com.example.android.m_struct.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_home"
                style="@style/MainButtons"
                android:text="@string/menu_home" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_discover"
                style="@style/MainButtons"
                android:text="@string/menu_discover_selected" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_playlist"
                style="@style/MainButtons"
                android:text="@string/menu_playlist" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/menu_radio"
                style="@style/MainButtons"
                android:text="@string/menu_radio" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DescriptionText"
                    android:text="@string/discover_screen_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TiteText"
                        android:text="@string/discover_house" />

                    <View style="@style/SepLine" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/discover_1"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_2"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_3"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TiteText"
                        android:text="@string/discover_rock" />

                    <View style="@style/SepLine" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/discover_4"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_5"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_6"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TiteText"
                        android:text="@string/discover_tropical" />

                    <View style="@style/SepLine" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/discover_7"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_8"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                            <ImageView
                                android:id="@+id/discover_9"
                                style="@style/CoverArtimagePlaylist"
                                android:contentDescription="@string/album_description"
                                android:src="@drawable/album_cover_art" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
